Quick fix for overlay region not showing properly

--- a/assets/css/app/variables.less
+++ b/assets/css/app/variables.less
@@ -13,4 +13,4 @@
 @overlay-inner-padding:         0;   // Padding applied to the overlay body
 @overlay-header-height:         30px; // Padding & margin applied to the overlay title
 @overlay-header-line-height:    @line-height-base;  //** overlay title line-height
-@overlay-z-index:               1000; // Overlay z-index
+@overlay-z-index:               @zindex-navbar-fixed + 1; // Overlay z-index
